# pebble-adventure-wf

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/c/: backgrounds.c  backgrounds.h  backgrounds_effects.c  main.c  sprites.c  sprites.h  weather.c  weather.h
src/pkjs/: config.json  index.js
test/: test_weather.c
tools/: gen_logo.py
